# hexlet_pytest

./: README.md  pyproject.toml
hexlet_pytest/: stack.py
tests/: test_stack.py
